# goit-pythonweb-hw-06

./: .gitignore  connect.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/versions/: 5c87f6439774_init.py  76ad2ef61881_changed_db_structure_added_grade_entity_.py  cb5fde5c4d5e_added_seed_to_tables.py
